--- a/01-desarrollo-front-end/curso/ejercicios/desafios/temas-peliculas/desafio-temas-peliculas.html
+++ b/01-desarrollo-front-end/curso/ejercicios/desafios/temas-peliculas/desafio-temas-peliculas.html
@@ -1,11 +1,351 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Films</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
-  <!-- Titulo, Sinopsis, Genero como minumo -->
+  <header>
+    <h1>Apple TV+</h1>
+  </header>
+  <main>
+    <section class="hero">
+      <section class="container">
+        <section class="content-container">
+          <div class="blur">
+            <div class="blur-container">
+              <div class="header">
+                <img src="./assets/hero/title.webp" alt="bad sisters" />
+              </div>
+              <div class="header-content-metadata">
+                <span>Drama</span><span>2022</span>
+              </div>
+              <div class="header-content-availability">
+                <p>7 days free, then $6.99/month.</p>
+              </div>
+              <div class="info">
+                <div class="summary">
+                  <section class="text">
+                    <p>2023 nominee for 4 Emmy® Awards. The Garvey sisters have always looked out for each other. When
+                      their brother-in-law winds up dead, his life insurers set out to prove malicious intent—and set
+                      their sights on the sisters, all of whom had motives.
+                    </p>
+                    <div class="secondary-text">
+                      <div class="gender">
+                        <span>Drama</span><span>2022</span>
+                      </div>
+                      <div class="badge">
+                        <span>15+</span>
+                      </div>
+                      <div class="tv-ma">
+                        <span>TV-MA</span>
+                      </div>
+                      <div class="k">
+                        <span>4K</span>
+                      </div>
+                      <div class="cc">
+                        <span>CC</span>
+                      </div>
+                      <div class="ad">
+                        <span>AD</span>
+                      </div>
+                      <div class="sdh">
+                        <span>SDH</span>
+                      </div>
+                    </div>
+                  </section>
+                </div>
+                <div class="starring">
+                  <p>Starring
+                    <span><a href="https://tv.apple.com/us/person/sharon-horgan/umc.cpc.2iib9a6w6e6hrnkwthetc6zly"
+                        target="_blank">Sharon Horgan</a>, </span>
+                    <span><a href="https://tv.apple.com/us/person/anne-marie-duff/umc.cpc.3grn7qwf4qc4fa4h45eknkjwa"
+                        target="_blank">Anne-Marie Duff</a>,</span>
+                    <span><a href="https://tv.apple.com/us/person/claes-bang/umc.cpc.64lmgn0e6q0obe7hjgrvsq1xk"
+                        target="_blank">Claes Bang</a></span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </section>
+    </section>
+    <!-- CAST & CREW -->
+    <section class="cast-crew">
+      <section class="container">
+        <hr>
+        <h2>Cast & Crew</h2>
+        <div class="cast-crew-slider">
+          <ul class="cast-list">
+            <!-- Sharon Horgan-->
+            <li class="cast-list-item">
+              <a href="https://tv.apple.com/us/person/sharon-horgan/umc.cpc.2iib9a6w6e6hrnkwthetc6zly" target="_blank">
+                <div class="profile-img">
+                  <img src="./assets/cast/sharon-horgan.webp" alt="Sharon Horgan" />
+                </div>
+                <div class="profile-detail">
+                  <p class="title">Sharon Horgan</p>
+                  <p class="subtitle">Eva Garvery</p>
+                </div>
+              </a>
+            </li>
+            <!-- Anne-Marie Duff-->
+            <li class="cast-list-item">
+              <a href="https://tv.apple.com/us/person/anne-marie-duff/umc.cpc.3grn7qwf4qc4fa4h45eknkjwa"
+                target="_blank">
+                <div class="profile-img">
+                  <img src="./assets/cast/anne-marie-duff.webp" alt="Sharon Horgan" />
+                </div>
+                <div class="profile-detail">
+                  <p class="title">Anne-Marie Duff</p>
+                  <p class="subtitle">Grace Williams</p>
+                </div>
+              </a>
+            </li>
+            <!-- Claes Bang -->
+            <li class="cast-list-item">
+              <a href="https://tv.apple.com/us/person/claes-bang/umc.cpc.64lmgn0e6q0obe7hjgrvsq1xk" target="_blank">
+                <div class="profile-img">
+                  <img src="./assets/cast/claes-bang.webp" alt="Sharon Horgan" />
+                </div>
+                <div class="profile-detail">
+                  <p class="title">Claes Bang</p>
+                  <p class="subtitle">John Paul Williams</p>
+                </div>
+              </a>
+            </li>
+            <!-- Eva Birthistle-->
+            <li class="cast-list-item">
+              <a href="https://tv.apple.com/us/person/eva-birthistle/umc.cpc.1dy792ntedd75q1qrlvyv9d5i" target="_blank">
+                <div class="profile-img">
+                  <img src="./assets/cast/eva-birthistle.webp" alt="Sharon Horgan" />
+                </div>
+                <div class="profile-detail">
+                  <p class="title">Eva Birthistle</p>
+                  <p class="subtitle">Ursula Flynn</p>
+                </div>
+              </a>
+            </li>
+            <!-- Sarah Greene-->
+            <li class="cast-list-item">
+              <a href="https://tv.apple.com/us/person/sarah-greene/umc.cpc.5z6ai9lm9cv7tewlayw0gcykp" target="_blank">
+                <div class="profile-img">
+                  <img src="./assets/cast/sarah-greene.webp" alt="Sharon Horgan" />
+                </div>
+                <div class="profile-detail">
+                  <p class="title">Sarah Greene</p>
+                  <p class="subtitle">Bibi Garvey</p>
+                </div>
+              </a>
+            </li>
+            <!-- Eve Hewson-->
+            <li class="cast-list-item">
+              <a href="https://tv.apple.com/us/person/eve-hewson/umc.cpc.3qroanzr715bed80626w2031y" target="_blank">
+                <div class="profile-img">
+                  <img src="./assets/cast/eve-hewson.webp" alt="Sharon Horgan" />
+                </div>
+                <div class="profile-detail">
+                  <p class="title">Eve Hewson</p>
+                  <p class="subtitle">Becka Garvey</p>
+                </div>
+              </a>
+            </li>
+            <!-- Brian Gleeson -->
+            <li class="cast-list-item">
+              <a href="https://tv.apple.com/us/person/brian-gleeson/umc.cpc.3wplueysjs4tzkxh0xc6506a" target="_blank">
+                <div class="profile-img">
+                  <img src="./assets/cast/brian-gleeson.webp" alt="Sharon Horgan" />
+                </div>
+                <div class="profile-detail">
+                  <p class="title">Brain Gleeson</p>
+                  <p class="subtitle">Thomas Claffin</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </section>
+    <!-- ABOUT -->
+    <section class="about">
+      <h2>About</h2>
+      <section class="boxes">
+        <section class="about-sumary">
+          <h3>Bad Sisters</h3>
+          <h4>DRAMA</h4>
+          <p>2023 nominee for 4 Emmy® Awards. The Garvey sisters have always looked out for each other. When their
+            brother-in-law winds up dead, his life insurers set out to prove malicious intent—and set their sights on
+            the
+            sisters, all of whom had motives. </p>
+        </section>
+        <section class="about-15">
+          <h3><span>15+</span></h3>
+          <h4>COMMON SENSE</h4>
+          <p>Irish dark comedy has mature themes, violence.</p>
+        </section>
+      </section>
+      <hr>
+    </section>
+    <!-- INFO, LANG, ACC -->
+    <section class="info-lang-acc">
+      <section class="information">
+        <h2>Information</h2>
+        <dl>
+          <dt>Genre</dt>
+          <dd>Drama</dd>
+          <dt>Released</dt>
+          <dd>2022</dd>
+          <dt>Rated</dt>
+          <dd>TV-MA</dd>
+          <dt>Region of origin</dt>
+          <dd>United Kingdom</dd>
+        </dl>
+      </section>
+      <section class="languages">
+        <h2>Languages</h2>
+        <dl>
+          <dt>Original Audio</dt>
+          <dd>English</dd>
+          <dt>Audio</dt>
+          <dd>Spanish (Latin America) (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩), Spanish (Spain) (AD, AAC, Dolby Atmos, ⁨Dolby
+            5.1⁩), and 8 more...</dd>
+          <dt>Subtitles</dt>
+          <dd>Spanish (Latin America) (SDH), Spanish (Spain) (SDH), and 39 more...</dd>
+        </dl>
+        <button class="see-all" type="button" id="open-modal">
+          See All
+        </button>
+        <div class="modal" id="myModal">
+          <div class="modal-content">
+            <button class="close" type="button" id="close-modal">
+              X
+            </button>
+            <div class="modal-content-container">
+              <h2>Original Audio</h2>
+              <p>English</p>
+              <h2>Audio</h2>
+              <ul class="languages-modal-list">
+                <li class="languages-modal-item">
+                  Spanish (Latin America) <span> (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Spanish (Spain) <span> (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩)</span>
+                </li>
+                <li class="languages-modal-item">
+                  English <span> (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩)</span>
+                </li>
+                <li class="languages-modal-item">
+                  French(Canada) <span> (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩)</span>
+                </li>
+                <li class="languages-modal-item">
+                  French (France) <span> (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩)</span>
+                </li>
+                <li class="languages-modal-item">
+                  German <span> (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Italian <span> (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Japanese <span> (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Portuguese (Brazil) <span> (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Russian <span> (AD, AAC, Dolby Atmos, ⁨Dolby 5.1⁩)</span>
+                </li>
+              </ul>
+              <h2>Subtitles</h2>
+              <ul class="languages-modal-list">
+                <li class="languages-modal-item">
+                  Spanish (Latin America) <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Spanish (Spain) <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Arabic<span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Bulgarian <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Cantonese, Traditional<span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Chinese, Simplified <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Chinese, Traditional <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Czech <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Danish <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Dutch <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  English <span> (CC, SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Estonian <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                 Finnish <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  French (Canada) <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  French (France) <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  German <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Greek <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Hebrew <span> (SDH)</span>
+                </li>
+                <li class="languages-modal-item">
+                  Hindi<span> (SDH)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="acessibility">
+        <h2> Accessibility</h2>
+        <dl>
+          <dt class="caption">
+            <span>CC</span>
+          </dt>
+          <dd>Closed captions (CC) refer to subtitles in the available language with the addition of relevant
+            non-dialogue information.</dd>
+          <dt class="caption">
+            <span>AD</span>
+          </dt>
+          <dd>Audio descriptions (AD) refer to a narration track describing what is happening on screen, to provide
+            context for those who are blind or have low vision.</dd>
+        </dl>
+      </section>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
+  <script src="./script.js"></script>
 </body>
+
 </html>
