--- a/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/visibilidad-desbordamiento/visualizacion-y-transparencia.html
+++ b/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/visibilidad-desbordamiento/visualizacion-y-transparencia.html
@@ -12,6 +12,10 @@
       font-size: 32px;
     }
 
+    /* 
+    opacity: 0; o visibility: hidden -> mantiene su lugar
+    display: none; -> no mantiene su lugar, el flujo de la pantalla
+    */
     .a1 {
       opacity: .1;
     }
