--- a/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/visibilidad-desbordamiento/desbordamiento.html
+++ b/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/visibilidad-desbordamiento/desbordamiento.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desbordamiento</title>
+  <style>
+    p {
+      width: 200px;
+      height: 200px;
+      background-color: dodgerblue;
+      padding: 10px;
+      margin: 5px;
+      border: 2px solid #666;
+    }
+
+    .p1 {
+      overflow: visible;
+    }
+
+    .p2 {
+      overflow: hidden;
+    }
+
+    .p3 {
+      overflow: scroll;
+    }
+
+    .p4 {
+      overflow: auto;
+    }
+
+    .p5 {
+      overflow-y: scroll;
+      overflow-x: hidden;
+    }
+
+  </style>
 </head>
+
 <body>
   <header>
     <h1>Desbordamiento</h1>
   </header>
-  <main></main>
+  <main>
+    <p class="p1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure aspernatur, nihil hic quam possimus,
+      alias est repellendus culpa maxime nam illum amet commodi repellat qui nobis eveniet fuga atque nostrum.</p>
+    <p class="p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure aspernatur, nihil hic quam possimus,
+      alias est repellendus culpa maxime nam illum amet commodi repellat qui nobis eveniet fuga atque nostrum.</p>
+    <p class="p3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure aspernatur, nihil hic quam possimus,
+      alias est repellendus culpa maxime nam illum amet commodi repellat qui nobis eveniet fuga atque nostrum.</p>
+    <p class="p4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure aspernatur, nihil hic quam possimus,
+      alias est repellendus culpa maxime nam illum amet commodi repellat qui nobis eveniet fuga atque nostrum.</p>
+    <p class="p5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure aspernatur, nihil hic quam possimus,
+      alias est repellendus culpa maxime nam illum amet commodi repellat qui nobis eveniet fuga atque nostrum.</p>
+  </main>
 </body>
+
 </html>
