--- a/01-desarrollo-front-end/curso/css/posicionar-y-flotar/elementos-flotantes.html
+++ b/01-desarrollo-front-end/curso/css/posicionar-y-flotar/elementos-flotantes.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elementos flotantes</title>
+  <link rel="stylesheet" href="../../estilos/estilo-general.css">
+  <style>
+    .fl {
+      float: left;
+    }
+
+    .fr {
+      float: right;
+    }
+
+    .fn {
+      float: none;
+    }
+    
+  </style>
 </head>
 <body>
   <header>
     <h1>Elementos flotantes</h1>
   </header>
   <main>
-    
+    <div class="aa-150 m-10 f-g">1</div>
+    <div class="aa-150 m-10 f-v fl">2</div>
+    <div class="aa-150 m-10 f-r fr">3</div>
+    <div class="aa-150 m-10 f-v fl">4</div>
+    <div class="aa-150 m-10 f-r fr">5</div>
+    <div class="aa-150 m-10 f-v fl">6</div>
+    <div class="aa-150 m-10 f-r fr">7</div>
+    <div class="aa-150 m-10 f-v fl">8</div>
   </main>
 </body>
 </html>
