--- a/01-desarrollo-front-end/curso/css/posicionar-y-flotar/despejar-elementos.html
+++ b/01-desarrollo-front-end/curso/css/posicionar-y-flotar/despejar-elementos.html
@@ -3,14 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../estilos/estilo-general.css">
   <title>Despejar elementos</title>
+  <style>
+    .cl {clear: left;}
+    .cr{clear: right;}
+    .cb {clear: both;}
+  </style>
 </head>
 <body>
   <header>
     <h1>Despejar elementos</h1>
   </header>
   <main>
-    
+    <div class="aa-150 m-10 f-g fl">1</div>
+    <div class="aa-150 m-10 f-r fl cl">2</div>
+    <div class="aa-150 m-10 f-g fl">3</div>
+    <div class="aa-150 m-10 f-g fr">4</div>
+    <div class="aa-150 m-10 f-b fl cr">5</div>
+    <div class="aa-150 m-10 f-g fr">6</div>
+    <div class="aa-150 m-10 f-g fl">7</div>
+    <div class="aa-150 m-10 f-v fr cb">8</div>
   </main>
 </body>
 </html>
