--- a/01-desarrollo-front-end/curso/css/posicionar-y-flotar/alinear-elementos.html
+++ b/01-desarrollo-front-end/curso/css/posicionar-y-flotar/alinear-elementos.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../estilos/estilo-general.css">
   <title>Alinear elementos</title>
+  <style>
+    .ct {
+      text-align: center;
+      padding: 20px 0;
+    }
+    .ma {
+      margin: auto;
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <h1>Alinear elementos</h1>
   </header>
   <main>
-    
+    <div class="a-400 est-2">
+      <h2 class="f-n m-0 ct">Titulo del articulo</h2>
+      <p class="a-300 r-10 t-b ma f-g">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, veniam minus
+        recusandae consequuntur voluptate, id vero blanditiis nam esse, laboriosam quam dignissimos dolorem assumenda
+        tempore. Porro, minima. Soluta, in deleniti.</p>
+    </div>
   </main>
 </body>
+
 </html>
