--- a/01-desarrollo-front-end/curso/css/posicionar-y-flotar/posicion-absoluta.html
+++ b/01-desarrollo-front-end/curso/css/posicionar-y-flotar/posicion-absoluta.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../estilos/estilo-general.css">
   <title>Posicion absoluta</title>
+  <style>
+    .p1 {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    .p2 {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+
+    .p3 {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+
+    .p4 {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
+
+    .p5 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+    }
+
+    .p6 {
+      position: absolute;
+      top: 2000px;
+      left: 50%;
+    }
+
+    .p7 {
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <h1>Posicion absoluta</h1>
   </header>
   <main>
-    
+    <div class="aa-100 f-r p1">p1</div>
+    <div class="aa-100 f-r p2">p2</div>
+    <div class="aa-100 f-r p3">p3<div class="aa-100 f-a p7"></div>
+      <div class="aa-100 f-r p4">p4</div>
+      <div class="aa-100 f-r p5">p5</div>
+      <div class="aa-100 f-r p6">p6</div>
   </main>
 </body>
+
 </html>
