--- a/01-desarrollo-front-end/curso/css/posicionar-y-flotar/posicion-pegajosa.html
+++ b/01-desarrollo-front-end/curso/css/posicionar-y-flotar/posicion-pegajosa.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../estilos/estilo-general.css">
   <title>Posicion pegajosa</title>
+  <style>
+    body {
+      height: 2000px;
+    }
+
+    .pegajoso {
+      position: sticky;
+      top: 0;
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <h1>Posicion pegajosa</h1>
   </header>
   <main>
-    
+    <h2 class="est-2 r-10">Titulo del articulo</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima labore repudiandae autem, iste enim unde
+      aspernatur, eaque quidem eligendi doloremque pariatur sit ex quibusdam deserunt perspiciatis commodi ducimus totam
+      laborum!</p>
+    <h2 class="est-4 r-10 pegajoso">Titulo pegajoso</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima labore repudiandae autem, iste enim unde
+      aspernatur, eaque quidem eligendi doloremque pariatur sit ex quibusdam deserunt perspiciatis commodi ducimus totam
+      laborum!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima labore repudiandae autem, iste enim unde
+      aspernatur, eaque quidem eligendi doloremque pariatur sit ex quibusdam deserunt perspiciatis commodi ducimus totam
+      laborum!</p>
+    <p class="est-2 r-20 fr pegajoso">Párrafo pegajoso</p>
   </main>
 </body>
+
 </html>
