--- a/01-desarrollo-front-end/curso/css/posicionar-y-flotar/posicion-relativa.html
+++ b/01-desarrollo-front-end/curso/css/posicionar-y-flotar/posicion-relativa.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../estilos/estilo-general.css">
   <title>Posicion relativa</title>
+  <style>
+    .pr1,
+    .pr2 {
+      position: relative;
+      top: -20px;
+      left: 20px;
+    }
+    .pr3 {
+      position: relative;
+      top: 150px;
+    }
+    .pr4 {
+      position: relative;
+      top: 25px;
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <h1>Posicion relativa</h1>
   </header>
   <main>
-    
+    <section class="a-400 est-4">
+      <h2 class="t-n pr1">Titulo del articulo</h2>
+      <p class="pr2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quidem numquam itaque iste
+        facere quis corrupti et fugit nostrum hic sapiente error nobis, commodi enim non doloribus in cum placeat!</p>
+    </section>
+    <div class="aa-100 f-g fl"></div>
+    <div class="aa-100 f-g fl pr3"></div>
+    <div class="aa-100 f-g fl pr4"></div>
+    <div class="aa-100 f-g fl"></div>
   </main>
 </body>
+
 </html>
