--- a/01-desarrollo-front-end/curso/css/posicionar-y-flotar/orden-de-capa-por-indice.html
+++ b/01-desarrollo-front-end/curso/css/posicionar-y-flotar/orden-de-capa-por-indice.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../estilos/estilo-general.css">
   <title>Orden de capa por indice</title>
+  <style>
+    div {
+      position: absolute;
+
+    }
+
+    .d1 {
+      left: 0;
+      z-index: 1;
+    }
+
+    .d2 {
+      left: 10px;
+      z-index: 2;
+    }
+
+    .d3 {
+      left: 20px;
+      z-index: 3;
+    }
+
+    .d4 {
+      left: 30px;
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <h1>Orden de capa por indice</h1>
   </header>
   <main>
-    
+    <div class="aa-200 est-1 r-10 d1">1</div>
+    <div class="aa-200 est-1 r-10 d2">2</div>
+    <div class="aa-200 est-1 r-10 d3">3</div>
+    <div class="aa-200 est-1 r-10 d4">4</div>
   </main>
 </body>
+
 </html>
