--- a/01-desarrollo-front-end/curso/html/listas/listas-de-descripcion.html
+++ b/01-desarrollo-front-end/curso/html/listas/listas-de-descripcion.html
@@ -9,6 +9,16 @@
   <header>
     <h1>Listas de descripcion</h1>
   </header>
-  <main></main>
+  <main>
+    <!-- dl: description list -->
+    <dl>
+      <dt>Término</dt>
+      <dd>Descripción del término</dd>
+      <dt>HTML5</dt>
+      <dd>Es un lenguaje de marcado de Hipertexto diseñado para mostrar documentos de internet.</dd>
+      <dt>CSS3</dt>
+      <dd>Es un lenguaje de cascada, diseñado para estructurar y embellecer los documentos html y usados en Internet.</dd>
+    </dl>
+  </main>
 </body>
 </html>
