--- a/01-desarrollo-front-end/curso/css/listas/pseudo-clase-por-tipo.html
+++ b/01-desarrollo-front-end/curso/css/listas/pseudo-clase-por-tipo.html
@@ -1,14 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pseudo clase por tipo</title>
+  <style>
+    div {
+      width: 500px;
+      padding: 20px;
+      background-color: gray;
+      border: 2px solid black;
+    }
+
+    li {
+      padding: 5px;
+    }
+
+    li:first-of-type {
+      color: red;
+    }
+
+    li:last-of-type {
+      color: darkred;
+    }
+
+    li:only-of-type {
+      color: orange;
+    }
+
+    li:nth-of-type(2) {
+      color: yellow;
+    }
+    li:nth-last-of-type(2) {
+      color: yellowgreen;
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <h1>Pseudo clase por tipo</h1>
   </header>
-  <main></main>
+  <main>
+    <div>
+      <ol>
+        <li>Elemento de lista</li>
+        <li>Elemento de lista</li>
+        <li>Elemento de lista</li>
+        <ol>
+          <li>Elemento anidado</li>
+          <li>Elemento anidado</li>
+          <li>Elemento anidado</li>
+          <li>Elemento anidado</li>
+        </ol>
+        <li>Elemento de lista</li>
+        <li>Elemento de lista</li>
+        <li>Elemento de lista</li>
+        <ol>
+          <li>Primer, último y único elemento anidado</li>
+        </ol>
+      </ol>
+    </div>
+  </main>
 </body>
+
 </html>
