-agrego un index para hacer una web con links y cambio carpetas de orden

--- a/desafios/peliculas/index.html
+++ b/desafios/peliculas/index.html
@@ -169,6 +169,10 @@
             </li>
           </ul>
         </div>
+        <div>
+          <button id="prevBtn"><</button>
+          <button id="nextBtn">></button>
+        </div>
       </section>
     </section>
     <!-- ABOUT -->
