--- a/01-desarrollo-front-end/curso/html/imagenes/imagenes.html
+++ b/01-desarrollo-front-end/curso/html/imagenes/imagenes.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Imagenes</title>
-  <link rel="stylesheet" href="../../estilos/estilo-general.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../../estilos/estilo-general.css">
+	<title>Document</title>
 </head>
 <body>
-  <header>
-    <h1>Imagenes</h1>
-  </header>
-  <main></main>
+	<img src="../../imagenes/perro.jpg" alt="Imagen de un perro" title="Texto flotante" width="500" height="500">
+	<img class="a-100p b-n" src="../../imagenes/mariposa.jpg" alt="Imagen de una mariposa">
+	<img class="a-50p b-n" src="../../imagenes/flor.jpg" alt="Imagen de una flor">
+	<img class="a-500 b-n" src="../../imagenes/coche.jpg" alt="Imagen de una coche">
+	<img class="aa-250 b-n" src="../../imagenes/coche.jpg" alt="Imagen de una coche">
+	<img src="" alt="">
 </body>
 </html>
