--- a/01-desarrollo-front-end/curso/css/imagenes/desplazamiento-de-imagen-de-fondo.html
+++ b/01-desarrollo-front-end/curso/css/imagenes/desplazamiento-de-imagen-de-fondo.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desplazamiento de imagen de fondo</title>
-  <link rel="stylesheet" href="../../estilos/estilo-general.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../../estilos/estilo-general.css">
+	<title>Document</title>
+	<style>
+		p {
+			font-size: 28px;
+			padding: 20px 50px;
+			color: white;
+		}
+		.img1 {
+			background-image: url('../../imagenes/mariposa.jpg');
+			background-size: 450px 450px;
+			background-repeat: no-repeat;
+			background-position: 50% 50%;
+		}
+		.img2 {
+			background-image: url('../../imagenes/flor.jpg');
+			background-size: 450px 450px;
+			background-repeat: no-repeat;
+			background-position: top center;
+		}
+		.img3 {
+			background-image: url('../../imagenes/perro.jpg');
+			background-size: 450px 450px;
+			background-repeat: no-repeat;
+			background-position: center left;
+		}
+		.img4 {
+			background-image: url('../../imagenes/auricular.jpg');
+			background-size: 100% 100%;
+			background-repeat: no-repeat;
+			background-position: 0 50px;
+		}
+		.img5 {
+			background-image: url('../../imagenes/coche.jpg');
+			background-size: 100% 45%;
+			background-repeat: no-repeat;
+			background-position: 0 100%;
+		}
+		.img6 {
+			background-image: url('../../imagenes/abstracto.png');
+			background-size: 100% 100%;
+			background-repeat: no-repeat;
+			background-position: 0 -220px;
+		}
+	</style>
 </head>
 <body>
-  <header>
-    <h1>Desplazamiento de imagen de fondo</h1>
-  </header>
-  <main></main>
+	<div class="img1 a-500 al-500 r-10 m-10 f-g fl">
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit, mollitia assumenda minus quidem! Eaque, quisquam voluptas magnam minima dolor quibusdam sit aperiam nihil suscipit dignissimos. Veniam voluptatibus tenetur, quasi.</p>
+	</div>
+	<div class="img2 a-500 al-500 r-10 m-10 f-g fl">
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit, mollitia assumenda minus quidem! Eaque, quisquam voluptas magnam minima dolor quibusdam sit aperiam nihil suscipit dignissimos. Veniam voluptatibus tenetur, quasi.</p>
+	</div>
+	<div class="img3 a-500 al-500 r-10 m-10 f-g fl">
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit, mollitia assumenda minus quidem! Eaque, quisquam voluptas magnam minima dolor quibusdam sit aperiam nihil suscipit dignissimos. Veniam voluptatibus tenetur, quasi.</p>
+	</div>
+	<div class="img4 a-500 al-500 r-10 m-10 f-g fl">
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit, mollitia assumenda minus quidem! Eaque, quisquam voluptas magnam minima dolor quibusdam sit aperiam nihil suscipit dignissimos. Veniam voluptatibus tenetur, quasi.</p>
+	</div>
+	<div class="img5 a-500 al-500 r-10 m-10 f-g fl">
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit, mollitia assumenda minus quidem! Eaque, quisquam voluptas magnam minima dolor quibusdam sit aperiam nihil suscipit dignissimos. Veniam voluptatibus tenetur, quasi.</p>
+	</div>
+	<div class="img6 a-500 al-500 r-10 m-10 f-g fl">
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque suscipit, mollitia assumenda minus quidem! Eaque, quisquam voluptas magnam minima dolor quibusdam sit aperiam nihil suscipit dignissimos. Veniam voluptatibus tenetur, quasi.</p>
+	</div>
 </body>
 </html>
