--- a/desafios/peliculas/index.html
+++ b/desafios/peliculas/index.html
@@ -3,9 +3,25 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Films</title>
+  <title>Film | Bad Sister</title>
   <link rel="stylesheet" href="./styles.css">
+  <link rel="shortcut icon" href="./img/minitor.ico" type="image/x-icon">
+  <meta name="description"
+  content="Bienvenidos a mi practica con HTML5, CSS3 y JavaScript, haciendo una presentacion de Bad Sisters.">
+  <link rel="favicon" href="https://img.icons8.com/ios-filled/32/mac-os.png">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/ios-filled/64/mac-os.png">
+  <meta name="theme-color" content="#2d2d2d">
+  <meta name="twitter:card" content="summary">
+  <meta property="og:type" content="website">
+  <meta property="og:title" name="twitter:title" content="Film | Bad Sister">
+  <meta property="og:description" name="twitter:description"
+    content="Bienvenidos a mi practica con HTML5, CSS3 y JavaScript, haciendo una presentacion de Bad Sisters.">
+  <meta property="og:image" name="twitter:image"
+    content="https://eugenia1984.github.io/desarrollo-front-end-html-css-javascript/desafios/peliculas/assets/hero/sisters.jpg">
+  <meta property="og:url" name="twitter:url"
+    content="https://eugenia1984.github.io/desarrollo-front-end-html-css-javascript/desafios/peliculas/">
 </head>
 
 <body>
